src/test/deca/context/valid/created/objet/appel_meth2.deca
// description :
//      appel de la methode dans la classe
// Resultat
//      ok
class A {
    int x ;
    int getX() {
        return x ;
    }
    void setX(int x) {
        getX() ;
    }
}
